--- a/chesster/gui/res/game_dialog.ui
+++ b/chesster/gui/res/game_dialog.ui
@@ -13,6 +13,12 @@
     <height>837</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="minimumSize">
    <size>
     <width>815</width>
@@ -26,10 +32,10 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Spiel</string>
+   <string>Chess Gameplay</string>
   </property>
   <property name="sizeGripEnabled">
-   <bool>true</bool>
+   <bool>false</bool>
   </property>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
@@ -108,6 +114,9 @@
     <property name="text">
      <string>GAME TEXT GAME TEXT GAME TEXT GAME TEXT GAME TEXT GAME TEXT GAME TEXT GAME TEXT GAME TEXT GAME TEXT GAME TEXT GAME TEXT </string>
     </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
    </widget>
    <widget class="QPushButton" name="HintButton">
     <property name="geometry">
@@ -167,6 +176,9 @@
     </property>
     <property name="text">
      <string>HINT HINT HINT HINT HINT HINT HINT HINT HINT HINT HINT HINT HINT HINT HINT HINT </string>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="Hint_Label_No">
