Added functionality for Elo Rating Setting in Start_Dialog

--- a/chesster/gui/res/start_dialog.ui
+++ b/chesster/gui/res/start_dialog.ui
@@ -6,18 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>379</width>
-    <height>349</height>
+    <width>394</width>
+    <height>374</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Spiel Einstellungen</string>
+   <string>Game Settings</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
-      <string>Schwierigkeit [1-20]</string>
+      <string>Difficulty [1-20]</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
@@ -65,6 +65,23 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QRadioButton" name="Radio_Elo">
+        <property name="text">
+         <string>Use Elo Rating</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="Radio_Difficulty">
+        <property name="text">
+         <string>Use Difficulty Rating</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
@@ -80,7 +97,7 @@
       <enum>Qt::LeftToRight</enum>
      </property>
      <property name="title">
-      <string>Farbwahl</string>
+      <string>Choose Color</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
@@ -95,7 +112,7 @@
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="text">
-         <string>Zufall</string>
+         <string>Random</string>
         </property>
         <property name="checked">
          <bool>true</bool>
@@ -114,7 +131,7 @@
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="text">
-         <string>Weiß</string>
+         <string>white</string>
         </property>
        </widget>
       </item>
@@ -130,7 +147,7 @@
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="text">
-         <string>Schwarz</string>
+         <string>black</string>
         </property>
        </widget>
       </item>
