disabled options button due to lack of options

--- a/chesster/gui/res/window.ui
+++ b/chesster/gui/res/window.ui
@@ -47,6 +47,9 @@
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_2">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="cursor">
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
@@ -73,7 +76,7 @@
      <x>0</x>
      <y>0</y>
      <width>428</width>
-     <height>20</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
