--- a/chesster/gui/res/midgame_and_game_dialog.ui
+++ b/chesster/gui/res/midgame_and_game_dialog.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>815</width>
-    <height>837</height>
+    <width>1080</width>
+    <height>900</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -21,14 +21,14 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>815</width>
-    <height>590</height>
+    <width>1080</width>
+    <height>900</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>1920</width>
-    <height>1080</height>
+    <width>1080</width>
+    <height>900</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -453,7 +453,7 @@
     <rect>
      <x>20</x>
      <y>630</y>
-     <width>771</width>
+     <width>781</width>
      <height>16</height>
     </rect>
    </property>
@@ -479,6 +479,56 @@
    <property name="text">
     <string/>
    </property>
+  </widget>
+  <widget class="QProgressBar" name="progressBar">
+   <property name="geometry">
+    <rect>
+     <x>950</x>
+     <y>860</y>
+     <width>118</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>24</number>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>810</x>
+     <y>860</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Progress on current move</string>
+   </property>
+  </widget>
+  <widget class="Line" name="line_2">
+   <property name="geometry">
+    <rect>
+     <x>790</x>
+     <y>10</y>
+     <width>20</width>
+     <height>881</height>
+    </rect>
+   </property>
+   <property name="orientation">
+    <enum>Qt::Vertical</enum>
+   </property>
+  </widget>
+  <widget class="QWidget" name="verticalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>810</x>
+     <y>10</y>
+     <width>261</width>
+     <height>271</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="ChartLayout"/>
   </widget>
   <action name="actionAccept">
    <property name="text">
