--- a/chesster/gui/res/options.ui
+++ b/chesster/gui/res/options.ui
@@ -6,24 +6,34 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>392</width>
-    <height>392</height>
+    <width>203</width>
+    <height>153</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Optionen</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
+    <widget class="QCheckBox" name="audioCheckBox">
+     <property name="text">
+      <string>Audio</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QGroupBox" name="languageBox">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="title">
-      <string>Language</string>
+      <string>Sprache</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
@@ -44,16 +54,6 @@
        </widget>
       </item>
      </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QCheckBox" name="audioCheckBox">
-     <property name="text">
-      <string>Audio</string>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
-     </property>
     </widget>
    </item>
    <item>
