--- a/chesster/gui/res/start_dialog_midgameadd.ui
+++ b/chesster/gui/res/start_dialog_midgameadd.ui
@@ -6,18 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>394</width>
-    <height>451</height>
+    <width>343</width>
+    <height>445</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Game Settings</string>
+   <string>Spieleinstellungen</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QGroupBox" name="groupBox_2">
      <property name="title">
-      <string>Difficulty [1-20]</string>
+      <string>Schwerigkeit [1-20]</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
@@ -65,23 +65,6 @@
         </property>
        </widget>
       </item>
-      <item>
-       <widget class="QRadioButton" name="Radio_Elo">
-        <property name="text">
-         <string>Use Elo Rating</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QRadioButton" name="Radio_Difficulty">
-        <property name="text">
-         <string>Use Difficulty Rating</string>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
      </layout>
     </widget>
    </item>
@@ -97,7 +80,7 @@
       <enum>Qt::LeftToRight</enum>
      </property>
      <property name="title">
-      <string>Choose Color</string>
+      <string>Farbwahl</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
@@ -112,7 +95,7 @@
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="text">
-         <string>Random</string>
+         <string>Zufall</string>
         </property>
         <property name="checked">
          <bool>true</bool>
@@ -131,7 +114,7 @@
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="text">
-         <string>white</string>
+         <string>Weiß</string>
         </property>
        </widget>
       </item>
@@ -147,7 +130,7 @@
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="text">
-         <string>black</string>
+         <string>Schwarz</string>
         </property>
        </widget>
       </item>
@@ -157,80 +140,70 @@
    <item>
     <widget class="QGroupBox" name="groupBox_3">
      <property name="title">
-      <string>Hints</string>
+      <string>Hinweise</string>
      </property>
-     <widget class="QCheckBox" name="checkBox_hints">
-      <property name="geometry">
-       <rect>
-        <x>50</x>
-        <y>40</y>
-        <width>81</width>
-        <height>17</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Enable Hints</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_hints_text">
-      <property name="geometry">
-       <rect>
-        <x>50</x>
-        <y>60</y>
-        <width>181</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Number of hints based on Difficulty:</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_number_hints">
-      <property name="geometry">
-       <rect>
-        <x>230</x>
-        <y>60</y>
-        <width>47</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>NAN</string>
-      </property>
-     </widget>
+     <layout class="QVBoxLayout" name="verticalLayout_3">
+      <item>
+       <widget class="QCheckBox" name="checkBox_hints">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="text">
+         <string>Hinweise aktivieren</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
+        <item>
+         <widget class="QLabel" name="label_hints_text">
+          <property name="text">
+           <string>Verfügbare Hinweise</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_number_hints">
+          <property name="text">
+           <string>0</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
     <widget class="QGroupBox" name="groupBox_4">
      <property name="title">
-      <string>Midgame-Start</string>
+      <string>Zwischenspielstart</string>
      </property>
-     <widget class="QCheckBox" name="checkBox_midgame">
-      <property name="geometry">
-       <rect>
-        <x>50</x>
-        <y>40</y>
-        <width>201</width>
-        <height>17</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Start at a chooseable regular position</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_midgame_info">
-      <property name="geometry">
-       <rect>
-        <x>50</x>
-        <y>60</y>
-        <width>251</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Occupancy has to be defined in the following step</string>
-      </property>
-     </widget>
+     <layout class="QVBoxLayout" name="verticalLayout_4">
+      <item>
+       <widget class="QCheckBox" name="checkBox_midgame">
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="text">
+         <string>Beginne an gewähltem Stand </string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_midgame_info">
+        <property name="text">
+         <string>Belegheit wird demnäscht definiert</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </item>
    <item>
