--- a/chesster/gui/res/window.ui
+++ b/chesster/gui/res/window.ui
@@ -133,7 +133,7 @@
          </font>
         </property>
         <property name="text">
-         <string>Calibration</string>
+         <string>Kalibrierung</string>
         </property>
        </widget>
       </item>
